working txn status

--- a/views/bank/transactions.hbs
+++ b/views/bank/transactions.hbs
@@ -9,6 +9,7 @@
           <tr>
             <th>Description</th>
             <th>Time</th>
+            <th>Status</th>
             <th>Credit</th>
             <th>Debit</th>
           </tr>
@@ -18,6 +19,7 @@
             <tr>
               <td>{{this.description}}</td>
               <td>{{this.time}}</td>
+              <td>{{txn_status this.status}}</td>
               <td>{{this.credit}}</td>
               <td>{{this.debit}}</td>
             </tr>
